<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.billies_works.mypassmemo.MainActivity">

<!-- 登録名 -->

    <LinearLayout
        android:id="@+id/LinearLayout03Library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/text03Library"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/text02_library"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView03Library"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout03LoginId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/LinearLayout03Library"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/text03LoginId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/text02_loginid"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView03LoginID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="16sp" />

    </LinearLayout>

<LinearLayout
    android:id="@+id/LinearLayout03PassWD"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/LinearLayout03LoginId"
    android:layout_marginTop="8dp"
    android:orientation="horizontal"
    tools:ignore="RtlHardcoded">

    <TextView
        android:id="@+id/text03PassWD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/text02_passwd"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView03PassWD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="16sp" />

</LinearLayout>

<LinearLayout
    android:id="@+id/LinearLayout03Memo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/LinearLayout03PassWD"
    android:layout_marginTop="8dp"
    android:orientation="horizontal"
    tools:ignore="RtlHardcoded">

    <TextView
        android:id="@+id/text03Memo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/text02_memo"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView03Memo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_weight="2"
        android:inputType="text|textMultiLine"
        android:lines="5"
        android:maxLength="120"
        android:maxLines="5"
        android:minLines="5"
        tools:ignore="TextViewEdits" />

    <!--
    <EditText
        android:id="@+id/editText02Memo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:ellipsize="end"
        android:ems="10"
        android:hint="@string/text02_memohint"
        android:inputType="text|textMultiLine"
        android:lines="5"
        android:maxLength="120"
        android:maxLines="5"
        android:minLines="5"
        android:textSize="16sp" />
        -->
</LinearLayout>

    <Button
        android:id="@+id/button03Edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout03Memo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/button03_edit"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button03Show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button03Edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/button02_show"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button03Delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button03Show"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/button02_delete"
        android:textSize="16sp" />

</RelativeLayout>